# ccq

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.ko.md  README.md  install.sh  rust-toolchain.toml
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
docs/: cli.md  spec.md
scripts/: build-universal.sh  check-bin-fresh.sh  check-lint.sh
skills/listen/: SKILL.md
skills/listen/evals/: evals.json
skills/send/: SKILL.md
skills/send/evals/: evals.json
skills/watch/: SKILL.md
skills/watch/evals/: evals.json
src/: cli.rs  clock.rs  compat.rs  darwin.rs  error.rs  fs_atomic.rs  main.rs  manage.rs  message.rs  output.rs  owner.rs  queue.rs  resolve.rs  wait.rs
tests/: integration.rs
