[package]
name = "ccq"
version = "0.0.1"
edition = "2024"
rust-version = "1.88" # let-chains (stabilized in 1.88) are used in owner.rs
description = "Per-project, agent-agnostic message queue (maildir-style) for AI coding-agent sessions"
license = "MIT"
repository = "https://github.com/rekyungmin/ccq"
publish = false

[[bin]]
name = "ccq"
path = "src/main.rs"

[dependencies]
jiff = "0.2.28"
lexopt = "0.3.2"
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"

# Small, fast, offline-first universal binary (committed to bin/ccq).
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
